tests/NormalTests/paczka1/fuzzy1/38528115.err
Error in line 4: KQx A908 56,8
Error in line 8: cbOEQ A908 47,0
Error in line 21: xprc A308 76,3
Error in line 33: A308 A908 82,49
Error in line 35: cbOEQ A308 83,1
Error in line 29: KQx A308 91,1
